<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WFU</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="choise">Выберите ваш город</string>
    <string name="ok">Ok</string>
    <string name="_11_2018_n17_30">11 ноября 2018
        17:30</string>
    <string name="city">Днепр</string>
    <string name="_3">-3</string>
    <string name="_3__">-3</string>
    <string name="_12">12</string>
    <string name="_2">+2</string>
    <string name="_13">13</string>
    <string name="_3_">+3</string>
    <string name="_14">14</string>
    <string name="_1">-1</string>
    <string name="_15">15</string>
    <string name="_0">0</string>
    <string name="_16">16</string>
    <string name="_1_">+1</string>
    <string name="_17">17</string>
    <string name="suns">&#xf00d;</string>
    <string name="open_weather_maps_app_id">709930</string>
    <string name="todo">TODO</string>
    <string name="enterName">Введите название</string>
</resources>
