<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@color/Purple"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cityShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:text="@string/_3"
            android:textColor="@color/White"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/mainWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:contentDescription="TODO"
            android:src="@drawable/clearsky" />

    </LinearLayout>


<TableLayout
android:id="@+id/tableLayout"
android:layout_weight="2.6"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/Purple"
android:stretchColumns="*"
android:shrinkColumns="*">


<TableRow
    android:id="@+id/tableRow1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/tempHour1"
        android:text="@string/_3"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/tempHour2"
        android:text="@string/_2"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/tempHour3"
        android:text="@string/_3_"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/tempHour4"
        android:text="@string/_1"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/tempHour5"
        android:text="@string/_0"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/tempHour6"
        android:text="@string/_1_"
        android:textColor="@color/White" />


</TableRow>

<TableRow
    android:id="@+id/tableRow2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">


    <ImageView
        android:id="@+id/cloudHour1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@drawable/scatteredclouds" />

    <ImageView
        android:id="@+id/cloudHour2"
        android:layout_width="86dp"
        android:layout_height="98dp"
        android:contentDescription="TODO"
        android:src="@drawable/brokenclouds" />

    <ImageView
        android:id="@+id/cloudHour3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fewclouds"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/cloudHour4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/thunderstorm"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/cloudHour5"
        android:src="@drawable/showerrain" />

    <ImageView
        android:id="@+id/cloudHour6"
        android:src="@drawable/clearsky"
        android:contentDescription="TODO" />


</TableRow>


<TableRow
    android:id="@+id/tableRow3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/Hour1"
        android:text="@string/_12"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/Hour2"
        android:text="@string/_13"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/Hour3"
        android:text="@string/_14"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/Hour4"
        android:text="@string/_15"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/Hour5"
        android:text="@string/_16"
        android:textColor="@color/White" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/Hour6"
        android:text="@string/_17"
        android:textColor="@color/White" />

</TableRow>


</TableLayout>

</LinearLayout>